authz middleware and module implemented
